# bub

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  entrypoint.sh  env.example  mkdocs.yml  nanoclaw-research.md  pyproject.toml  tmp-7185032f-log-content.md  tmp-e4c1d537-log-content.md  todo.md
bub_sf/: pyproject.toml
bub_sf/src/bub_sf/: bub.sf  bub_ext.py  demo.py
experiments/haskell/: DslTests.hs  build.sh  stack.yaml  workflow-dsl.cabal
experiments/haskell/src/: DslAst.hs  DslParser.hs
systemf/: .gitignore  BATTLE_TEST_RESULTS.md  BATTLE_TEST_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_INVENTORY.md  NEXT_STEPS.md  PROJECT_STATUS.md  PROJECT_STATUS_CURRENT.md  PROJECT_SUMMARY.md  README.md  REFACTORING_NOTES.md  SESSION_SUMMARY.md  SURFACE_AST_ARCHITECTURAL_CONCERNS.md  SURFACE_AST_REFACTOR_CONTEXT.md  TEST_FAILURES_CATEGORIZED.md  demo.py  prelude.sf  pyproject.toml  test-repl-clean.sf  test-suite-repl.sf  test-suite.sf  test.idr  test_constructors.py  test_debug_nil.py  test_nil.py  test_prelude_debug.py  test_treverse.py  todo.md
systemf/.agent/: README.md  be-assist.md  config.yaml
systemf/.workflow/: cleanup-spec.md  kanban.md
systemf/.workflow/tasks/: task-0-manager-analysis.md  task-1-architect-review.md  task-2-implementor-cleanup.md
systemf/docs/: ELABORATOR_DESIGN.md  INDEX.md  architecture.md  elaborator-architecture-analysis.md  multi-pass-elaborator-plan-revised.md  multi-pass-elaborator-plan.md  scoped-ast-design.md  syntax.md
systemf/docs/architecture/: overview.md
systemf/docs/concepts/: bidirectional-checking.md
systemf/docs/design/: parser-tree.md  parsy-parser-design.md  parsy-parser-tests.md
systemf/docs/getting-started/: README.md
systemf/docs/notes/: visible-type-application.md  (+1 more)
systemf/examples/: identity.sf  list.sf  maybe.sf
systemf/tests/: llm_complex.sf  llm_examples.sf  llm_multiparam.sf  test_elaborator_rules.py  test_llm_files.py  test_llm_integration.py  test_pipeline.py  test_repl_llm.py  test_string.py
systemf/tmp/: parsy_init_runtime.py
(+642 files in other folders)
