name:                workflow-dsl
version:             0.1.0.0
synopsis:            Workflow DSL parser experiments using Trifecta
description:         Parser experiments for a workflow DSL using Trifecta parser combinators
homepage:            https://github.com/user/bub
license:             MIT
author:              Developer
maintainer:          dev@example.com
copyright:           2026
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DslAst
                       , DslParser
  other-modules:       
  build-depends:       base >=4.14 && <5
                     , trifecta >=2
                     , parsers
                     , text
                     , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
